--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container">
         <div class="row justify-content-between">
           <div class="logo">
-            <a href="index.html">g</a>
+            <a href="index.html">H</a>
           </div>
           <div class="hamburger-btn outer-shadow hover-in-shadow">
             <i class="fas fa-bars"></i>
@@ -56,12 +56,12 @@
           <li><a href="#home" class="link-item inner-shadow active">Home</a></li>
           <li><a href="#about" class="link-item outer-shadow hover-in-shadow">About</a></li>
           <li><a href="#services" class="link-item outer-shadow hover-in-shadow">Services</a></li>
-          <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">Portfolio</a></li>
+          <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">Projects</a></li>
           <!-- <li><a href="#testimonial" class="link-item outer-shadow hover-in-shadow">Testimonial</a></li> -->
           <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">Contact</a></li>
         </ul>
       </div>
-      <p class="copyright-text">&copy; 2021 This is demo</p>
+      <!-- <p class="copyright-text">&copy; 2024 All Right reserve to  @Nishant Kumar</p> -->
 
       <div class="fade-out-effect">
 
@@ -224,10 +224,19 @@
               </div>
 
               <div class="skill-item">
-                <p>DSA (CPP)</p>
+                <p>MongoDB</p>
                 <div class="progress inner-shadow">
                   <div class="progress-bar" style="width: calc(60% - 14px);">
                     <span>60%</span>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-item">
+                <p>DSA (CPP)</p>
+                <div class="progress inner-shadow">
+                  <div class="progress-bar" style="width: calc(60% - 14px);">
+                    <span>70%</span>
                   </div>
                 </div>
               </div>
@@ -408,7 +417,7 @@
           <div class="container">
             <div class="row">
               <div class="section-title">
-                <div class="data-heading">portfolio</div>
+                <div class="data-heading">Projects</div>
                 <h2>Latest Works</h2>
               </div>
             </div>
