--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                       <i class="fas fa-briefcase icon"></i>
                       <span>SEP, 2025 - Present </span>
                       <h3>Do It For Me Llc</h3>
-                      <h3>Full Stack Developer</h3>
+                      <h3>Full Stack Developer Intern</h3>
                       <h4>Work as a Full Stack Developer using Next.js for frontend and backend development.</h4>
                       <p>Contribute to multiple web projects, focusing on building responsive and scalable applications..</p>
                     </div>
